# ImageUpscaler

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .windsurfrules  Dockerfile  Dockerfile.esrgan  Makefile  README.md  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.test.yml  docker-compose.yml  portainer-stack.yml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml  deploy.yml  docker-build.yml
app/: main.py  models.py  tasks.py
esrgan_service/: __main__.py  main.py
requirements/: api.txt  dev.txt  esrgan.txt  prod.txt  test.txt
scripts/: check_github_status.sh  start.sh
tests/: README.md
tests/e2e/: run_test.sh  test_upscale.py  test_webhook.py
